@@ -1,6 +1,11 @@
 Open Vehicle Monitor System v3 - Change log
 
 ????-??-?? ???  ???????  OTA release
+- esp32wifi:
+  The OVMS will switch from Wifi APClient to Wifi Client mode after the timeout reached and a client is not connected. "APClient" will be restored upon reboot/network restart.
+  new config:
+    [network] ap2client.timeout   -- Wifi Mode APClient to client timeout in minutes (default 30 minutes), settings at Wifi
+    [network] ap2client.enable    -- Wifi Mode APClient to client enable/disable (default enable), settings at Wifi
 - Vehicle framework: signal generator operation state changes
   New events:
     vehicle.gen.start         -- Power delivery started
